--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,38 @@
 * {
   margin: 0;
   padding: 0;
+
+  /*  */
+}
+body {
   font-family: "Inter", sans-serif;
-  /* font-family: "Merriweather", serif; */
+}
+.container {
+  width: 82.5%;
+  margin: 0 auto;
+}
+
+header {
+  border-radius: 16px;
+  background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
+    url("../image/Banner Image.png");
+  font-family: "Merriweather", serif;
+  text-align: center;
+  color: #fff;
+  margin-top: 50px;
+  padding: 177px 344px;
+}
+header section {
+  width: 100%;
+}
+
+header section h2 {
+  font-size: 32px;
+  font-weight: 400;
+}
+header section h1 {
+  margin-top: 16px;
+  font-size: 72px;
+  font-weight: 900;
+  line-height: 95px;
 }
