--- a/style/style.css
+++ b/style/style.css
@@ -167,6 +167,12 @@ header section h1 {
   text-transform: uppercase;
   border: none;
 }
+.venau button:hover {
+  background: #fff;
+  color: #f00;
+  border: 2px solid #f00;
+  transition: 0.5s;
+}
 
 /* --------------Best offer section Style ------------------ */
 .best-offer {
@@ -216,6 +222,58 @@ header section h1 {
 
 .holidays-sale {
   margin-top: 120px;
+  text-align: center;
+  /* position: relative; */
+}
+
+.holidays-sale h1 {
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 72px;
+  font-weight: 900;
+  margin-top: 16px;
+  margin-bottom: 28px;
+}
+.holidays-sale h1 span {
+  color: #f00;
+}
+.holidays-sale .text-content {
+  position: relative;
+}
+.holidays-sale .image-container {
+  width: 100%;
+  position: relative;
+  margin-top: 70px;
+  /* background-color: aqua; */
+}
+.holidays-sale .image-container .img1 {
+  position: relative;
+  right: 200px;
+  width: 50%;
+  aspect-ratio: 1 / 1;
+  z-index: 3;
+  /* mix-blend-mode: color; */
+  bottom: 60px;
+}
+.holidays-sale .image-container .img2 {
+  position: relative;
+  right: 150px;
+  z-index: 2;
+  bottom: 200px;
+}
+.holidays-sale .image-container .img3 {
+  position: absolute;
+  right: 0px;
+  z-index: 1;
+  bottom: 220px;
+}
+.holidays-sale .image-container .img4 {
+  width: 100%;
+  height: 220px;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  margin: 0;
 }
 /* --------------Best Gift Section Style ---------------------- */
 .best-gift {
@@ -237,6 +295,13 @@ header section h1 {
   border-radius: 16px;
   background: lightgray 0px -35.755px / 100% 142.115% no-repeat;
 }
+
+.best-gift .photo-container img:hover {
+  transform: scale(1.2);
+  transition: 0.5s;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
 /* ----------Newsletter section Style ------------------------- */
 .newsletter {
   margin-top: 120px;
@@ -282,6 +347,9 @@ header section h1 {
   font-size: 18px;
   font-weight: 400;
   line-height: normal;
+}
+.newsletter input[type="email"]:focus {
+  color: rgba(7, 2, 17, 0.9);
 }
 /* ------------Footer Section Stye----------------------------- */
 footer {
